<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手游伴侣</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- footer start -->
    <string name="footer_rg_home_text">首页</string>
    <string name="footer_rg_cassify_text">分类</string>
    <string name="footer_rg_my_text">我的</string>
    <string name="footer_rg_manito_text">大神圈</string>
    <string name="footer_rg_activity_text">活动</string>
    <!-- footer end -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_classify">ClassifyActivity</string>
    <string name="title_activity_details">DetailsActivity</string>

</resources>
